--- a/index.hbs
+++ b/index.hbs
@@ -1,7 +1,9 @@
 {{!< default}}
 <div class="gh-page">
     <div class="gh-container">
-
+        <h1>
+            Website redesign in progress.
+        </h1>
         <div class="gh-postfeed">
         {{#foreach posts}}
 
