--- a/index.hbs
+++ b/index.hbs
@@ -2,7 +2,7 @@
 <div class="gh-page">
     <div class="gh-container">
         <h1>
-            Website redesign in progress.
+            Website redesign in progress. Please ignore the crappy default template.
         </h1>
         <div class="gh-postfeed">
         {{#foreach posts}}
