--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,250 +9,49 @@ production stylesheet in assets/built/screen.css using: npm run dev
 /* ---------------------------------------------------------- */
 
 /* Base components */
-@import "vars.css";
-@import "components/global.css";
-@import "components/forms.css";
-@import "components/buttons.css";
+@import "./vars.css";
+/* @import "./components/global.css"; */
+/* @import "./components/buttons.css"; */
+/* @import "./components/forms.css"; */
 
 /* Ghost components */
-@import "ghost/header.css";
-@import "ghost/content.css";
-@import "ghost/readmore.css";
-@import "ghost/members.css";
-@import "ghost/errors.css";
-@import "ghost/footer.css";
-@import "ghost/badge.css";
-@import "ghost/pagination.css";
-@import "ghost/comments.css";
+@import "./ghost/content.css";
+/* @import "./ghost/header.css"; */
+@import "./ghost/readmore.css";
+@import "./ghost/members.css";
+@import "./ghost/errors.css";
+@import "./ghost/footer.css";
+@import "./ghost/badge.css";
+@import "./ghost/pagination.css";
+@import "./ghost/comments.css";
 
+@import "tailwindcss";
+@source not "../built";
 
-
-/* Main - Your styles here! Edit below
-/* ---------------------------------------------------------- */
-
-html,
-.gh-viewport {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background: #ffffff;
+@theme {
+    --color-cke-orange: oklch(0.6908 0.2339 42.29);
+    --color-cke-beige: oklch(0.9132 0.0203 65.13);
+    --color-print-gray: oklch(0.326 0.0125 140.47);
+    --color-print-blue: oklch(0.5369 0.206 285.53);
+    --color-sil-gray: oklch(0.7092 0.0084 65.13);
+    --color-vfd-dark: oklch(0.1647 0.0119 179.16);
+    --color-vfd-light: oklch(0.8056 0.0829 180.5);
+    --font-sans: Lexend, sans-serif;
+    --font-vfd: Doto, monospace, sans-serif;
 }
 
-.gh-main {
-    flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
+@utility screendoor {
+    mask-image: var(--screendoor-img);
+    mask-repeat: repeat;
+    mask-size: 2px 2px;
+    mask-mode: luminance;
+    image-rendering: crisp-edges;
 }
 
-.gh-page {
-    padding: 0 4vmin;
+@utility text-menu {
+    @apply text-2xl font-sans font-bold;
 }
 
-.gh-article {
-    padding: 8vmin 0;
-}
-
-.gh-postfeed {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(350px, 100%), 1fr));
-    gap: 4.8vmin 4vmin;
-    padding: 8vmin 0;
-}
-
-.gh-postfeed > *:first-child {
-    grid-column: 1 / -1;
-}
-
-.gh-container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.gh-head-actions a:not(.gh-button) {
-    display: inline-flex;
-    align-items: center;
-    margin: 0;
-    padding: 10px;
-}
-
-.gh-head-actions a svg {
-    height: 1.8rem;
-    fill: currentcolor;
-}
-
-.gh-head-actions a:first-child svg {
-    margin-left: 20px;
-}
-
-.gh-head-actions a:last-child svg {
-    height: 2rem;
-}
-
-/* Index
-/* ---------------------------------------------------------- */
-
-/* .gh-card:not(:first-child) {
-    margin: 8vmin auto 0;
-} */
-
-.gh-card-link {
-    display: flex;
-    flex-direction: column;
-}
-
-.gh-card-image {
-    width: 100%;
-    /* max-height: 700px; */
-    object-fit: cover;
-    margin-bottom: 4vmin;
-    aspect-ratio: 1 / 1;
-}
-
-.gh-card-image:first-of-type {
-    aspect-ratio: 16 / 9;
-}
-
-
-.gh-card-meta {
-    display: block;
-    margin: 0 0 1rem;
-    font-size: 1.4rem;
-    line-height: 1.2em;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    opacity: 0.8;
-}
-
-.gh-card-content {
-    max-width: 720px;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 1.6rem;
-}
-
-.gh-card-content p {
-    margin: 1.2rem 0;
-    padding: 0 3vmin;
-}
-
-.gh-card-content > strong {
-    display: inline-block;
-    padding: 1px 0;
-    font-weight: 500;
-    box-shadow: 0 -1px 0 0 inset currentColor;
-    opacity: 0.75;
-}
-
-
-/* Page
-/* ---------------------------------------------------------- */
-
-.gh-page-head {
-    margin: 0 auto;
-    padding: 8vmin 0 4vmin;
-    text-align: center;
-}
-
-.gh-page-image {
-    margin: 4vmin 0 0 0;
-}
-
-.gh-page-head > p {
-    max-width: 720px;
-    margin: 0.3em auto 0;
-    padding: 0 6vmin;
-    font-size: 1.3em;
-    line-height: 1.4em;
-    opacity: 0.5;
-}
-
-@media (max-width: 700px) {
-    .gh-page-head > p {
-        font-size: 1.6rem;
-    }
-}
-
-
-/* Post
-/* ---------------------------------------------------------- */
-
-.gh-header {
-    padding: 0 0 8vmin 0;
-    text-align: center;
-}
-
-.gh-post-meta {
-    display: block;
-    margin: 0 0 1rem;
-    font-size: 1.4rem;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    opacity: 0.8;
-}
-
-.gh-excerpt {
-    margin: 1rem 0 0 0;
-}
-
-.gh-feature-image {
-    grid-column: wide-start / wide-end;
-    width: 100%;
-    margin: 8vmin 0 0;
-}
-
-.gh-feature-image img {
-    margin-inline: auto;
-    width: 100%;
-}
-
-.gh-post-footer {
-    margin: 2rem 0;
-}
-
-
-/* Author Archive
-/* ---------------------------------------------------------- */
-
-.gh-author-image {
-    height: 12vmin;
-    width: 12vmin;
-    margin: 0 auto 1.5em;
-    border-radius: 100%;
-    overflow: hidden;
-    object-fit: cover;
-}
-
-.gh-author-meta {
-    margin: 2vmin 0 0 0;
-    font-size: 1.2em;
-}
-
-.gh-author-links {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.gh-author-links a {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    margin: 0 0.75vmin;
-}
-
-.gh-author-links a + a:before {
-    display: block;
-    content: "";
-    margin: 0 1.25vmin 0 0;
-    height: 1em;
-    width: 1px;
-    background: rgba(0,0,0,0.3);
-    transform: rotate(20deg);
-}
-
-@media (max-width: 700px) {
-    .gh-author-meta {
-        font-size: 1.6rem;
-    }
+@utility btn-menu {
+    @apply text-menu text-center p-4 w-full block rounded-full;
 }
