--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -2,6 +2,12 @@
 /* ---------------------------------------------------------- */
 
 :root {
+    --cke-orange: #ff6200;
+    --cke-beige: #ece0d5;
+    --cke-print-gray: #313630;
+    --cke-print-blue: #694fdd;
+    --cke-vfd-dark: #0e1c19;
+    --cke-vfd-light: #00bda7;
 
     /* Colours */
     --color-primary: var(--ghost-accent-color, #3eb0ef);
@@ -12,7 +18,10 @@
     --color-error: #f05230;
 
     /* Fonts */
-    --font-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    --font-sans-serif:
+        -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
     --font-serif: Georgia, Times, serif;
     --font-mono: Menlo, Courier, monospace;
     --font-light: 100;
@@ -31,5 +40,4 @@
     --height: 4rem;
     --margin: 2rem;
     --radius: 0.5rem;
-
 }
