--- a/partials/deco/led_on.hbs
+++ b/partials/deco/led_on.hbs
@@ -5,8 +5,8 @@
    <stop stop-color="#dd2000" stop-opacity=".21431" offset="1"/>
   </radialGradient>
   <linearGradient id="linearGradient6" x1="3.9078" x2="4.2333" y1="1.6076" y2="7.4083" gradientUnits="userSpaceOnUse">
-   <stop stop-color="#f31e00" offset=".29873"/>
-   <stop stop-color="#970006" offset="1"/>
+   <stop stop-color="#a11e00" offset=".29873"/>
+   <stop stop-color="#770006" offset="1"/>
   </linearGradient>
   <radialGradient id="radialGradient10" cx="3.4434" cy="1.6695" r="2.6458" gradientTransform="matrix(.1 .6 -1.1878 .19795 5.872 -.54443)" gradientUnits="userSpaceOnUse">
    <stop stop-color="#ffebe7" stop-opacity=".51005" offset="0"/>
