--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -2,7 +2,7 @@
     {{#foreach navigation}}
         <li>
             <a href="{{url}}" class="flex flex-row items-center text-print-gray gap-2 cursor-pointer">
-                <div class="pointer-events-none p-4 block rounded-md border-black border-3 bg-sil-gray"></div>
+                <div class="pointer-events-none p-4 block rounded-md border-black border-3 bg-silicone-gray"></div>
                 {{#if current}}
                     {{> "deco/led_on"}}
                 {{else}}
