--- a/post.hbs
+++ b/post.hbs
@@ -4,18 +4,31 @@
 
 <article class="{{post_class}}">
 
-    <header class="gh-canvas bg-plastic-gray min-h-[75vh] max-h-screen grid grid-cols-12 grid-rows-8 gap-6 p-6">
-        {{!-- <span class="gh-post-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time> <span class="bull">&bull;</span> {{reading_time}}</span>
-        <h1 class="gh-title">{{title}}</h1> --}}
+    <header class="gh-canvas bg-plastic-gray min-h-[75vh] max-h-screen grid grid-cols-12 grid-rows-7 gap-6 p-6">
 
-        {{#if custom_excerpt}}
-        <p class="gh-excerpt">{{custom_excerpt}}</p>
-        {{/if}}
+        <div class="col-span-4 row-span-4 col-start-2 row-start-2">
+            <h1 class="text-white font-sans text-7xl font-bold">{{title}}</h1>
+            {{#if custom_excerpt}}
+            <p class="bg-vfd-dark text-vfd-light font-vfd text-xl p-2 rounded-lg w-full">{{custom_excerpt}}</p>
+            {{/if}}
+            <span class="gh-post-meta text-white">
+                Published on
+                <time class="bg-black text-red-500 font-segment text-4xl p-2 block rounded-lg leading-7 w-min" datetime="{{date format="YYYY-MM-DD"}}">{{date format="YYYY-MM-DD"}}</time>
+                Reading time
+                <div class="flex flex-row gap-2 items-center">
+                <p class="bg-black text-red-500 font-segment text-4xl p-2 block rounded-lg leading-7 w-min">{{reading_time minute="1" minutes="%"}}</p>
+                {{reading_time minute="minute" minutes="minutes"}}
+                </div>
+            </span>
+
+        </div>
+
+
 
         {{#if feature_image}}
         <figure class="col-span-6 col-start-6 row-span-6 row-start-2">
             <picture>
-              <source 
+              <source
                 srcset="
                 {{img_url feature_image size="xxs" format="avif"}} 30w,
                 {{img_url feature_image size="xs" format="avif"}} 100w,
@@ -23,10 +36,10 @@
                 {{img_url feature_image size="m" format="avif"}} 600w,
                 {{img_url feature_image size="l" format="avif"}} 1200w,
                 {{img_url feature_image size="xl" format="avif"}} 2000w"
-                sizes="(min-width: 1200px) 1200px, 90vw" 
+                sizes="(min-width: 1200px) 1200px, 90vw"
                 type="image/avif"
               >
-              <source 
+              <source
                 srcset="
                 {{img_url feature_image size="xxs" format="webp"}} 30w,
                 {{img_url feature_image size="xs" format="webp"}} 100w,
@@ -34,7 +47,7 @@
                 {{img_url feature_image size="m" format="webp"}} 600w,
                 {{img_url feature_image size="l" format="webp"}} 1200w,
                 {{img_url feature_image size="xl" format="webp"}} 2000w"
-                sizes="(min-width: 1200px) 1200px, 90vw" 
+                sizes="(min-width: 1200px) 1200px, 90vw"
                 type="image/webp"
               >
               <img
@@ -45,7 +58,7 @@
                 {{img_url feature_image size="m"}} 600w,
                 {{img_url feature_image size="l"}} 1200w,
                 {{img_url feature_image size="xl"}} 2000w"
-                sizes="(min-width: 1200px) 1200px, 90vw" 
+                sizes="(min-width: 1200px) 1200px, 90vw"
                 src="{{img_url feature_image size="l"}}"
                 class="screendoor"
                 alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
