--- a/post.hbs
+++ b/post.hbs
@@ -91,7 +91,7 @@
 
 </article>
 
-<aside class="gh-readmore">
+{{!-- <aside class="gh-readmore">
     <div class="gh-readmore-inner gh-container">
         <div class="gh-readmore-next">
             {{#next_post}}<a href="{{url}}">{{> "icons/arrow-left"}} <h4>{{title}}</h4></a>{{/next_post}}
@@ -102,6 +102,6 @@
             </a>{{/prev_post}}
         </div>
     </div>
-</aside>
+</aside> --}}
 
 {{/post}}
