--- a/default.hbs
+++ b/default.hbs
@@ -20,7 +20,7 @@
     {{!-- Outputs important meta data and settings, should always be in <head> --}}
 
 </head>
-<body class="{{body_class}} bg-plastic-beige">
+<body class="{{body_class}} bg-plastic-beige font-sans">
 <div class="flex flex-row w-screen">
 
 <header class="min-w-56 max-w-56 h-screen border-r-3 br-black fixed bg-beige">
