--- a/partials/css/fonts.hbs
+++ b/partials/css/fonts.hbs
@@ -5,49 +5,7 @@
     font-family: 'Doto';
     font-style: normal;
     font-weight: 800;
-    src: url({{asset "fonts/doto-v2-latin-800.woff2"}}) format('woff2'),
-        url({{asset "fonts/doto-v2-latin-800.ttf"}}) format('truetype');
-    }
-
-
-    /* lexend-regular - latin */
-    @font-face {
-    font-display: swap;
-    font-family: 'Lexend';
-    font-style: normal;
-    font-weight: 400;
-    src: url({{asset "fonts/lexend-v25-latin-regular.woff2"}}) format('woff2'),
-        url({{asset "fonts/lexend-v25-latin-regular.ttf"}}) format('truetype');
-    }
-
-    /* lexend-500 - latin */
-    @font-face {
-    font-display: swap;
-    font-family: 'Lexend';
-    font-style: normal;
-    font-weight: 500;
-    src: url({{asset "fonts/lexend-v25-latin-500.woff2"}}) format('woff2'),
-        url({{asset "fonts/lexend-v25-latin-500.ttf"}}) format('truetype');
-    }
-
-    /* lexend-700 - latin */
-    @font-face {
-    font-display: swap;
-    font-family: 'Lexend';
-    font-style: normal;
-    font-weight: 700;
-    src: url({{asset "fonts/lexend-v25-latin-700.woff2"}}) format('woff2'),
-        url({{asset "fonts/lexend-v25-latin-700.ttf"}}) format('truetype');
-    }
-
-    /* lexend-900 - latin */
-    @font-face {
-    font-display: swap;
-    font-family: 'Lexend';
-    font-style: normal;
-    font-weight: 900;
-    src: url({{asset "fonts/lexend-v25-latin-900.woff2"}}) format('woff2'),
-        url({{asset "fonts/lexend-v25-latin-900.ttf"}}) format('truetype');
+    src: url({{asset "fonts/doto-v2-latin-800.woff2"}}) format('woff2');
     }
 
     /* segment - latin */
@@ -56,15 +14,13 @@
     font-family: 'segment';
     font-style: normal;
     font-weight: 600;
-    src: url({{asset "fonts/7segment.woff"}}) format('woff'),
-        url({{asset "fonts/7segment.ttf"}}) format('truetype');
+    src: url({{asset "fonts/7segment.woff"}}) format('woff');
     }
 
-    /* Outward */
+    /* Andada Pro */
     @font-face {
-        font-family: 'Outward';
-        src: url({{asset "fonts/outward-block-webfont.woff2"}}) format('woff2'),
-            url({{asset "fonts/outward-block.ttf"}}) format('truetype');
+        font-family: 'Andada Pro';
+        src: url({{asset "fonts/AndadaPro.woff2"}}) format('woff2');
         font-weight: normal;
         font-style: normal;
     }
@@ -72,43 +28,34 @@
     /* Terminal Grotesque */
     @font-face {
         font-family: 'Terminal Grotesque';
-            src: url({{asset "fonts/terminal-grotesque-webfont.woff2"}}) format('woff2'),
-            url({{asset "fonts/terminal-grotesque-webfont.ttf"}}) format('truetype');
+            src: url({{asset "fonts/terminal-grotesque-webfont.woff2"}}) format('woff2');
         font-weight: normal;
         font-style: normal;
     }
 
-    /* Millimetre Light */
+    /* Orbitron */
     @font-face {
-        font-family: 'Millimetre';
-            src: url({{asset "fonts/Millimetre-Light_web.woff2"}}) format('woff2'),
-            url({{asset "fonts/Millimetre-Light.otf"}}) format('opentype');
-        font-weight: 300;
+        font-family: 'Orbitron';
+            src: url({{asset "fonts/Orbitron[wght].woff2"}}) format('woff2');
         font-style: normal;
+        font-feature-settings: "smcp";
     }
-    /* Millimetre Regular */
+
+    /* Gabarito */
     @font-face {
-        font-family: 'Millimetre';
-            src: url({{asset "fonts/Millimetre-Regular_web.woff2"}}) format('woff2'),
-            url({{asset "fonts/Millimetre-Regular.otf"}}) format('opentype');
-        font-weight: 400;
+        font-family: 'Gabarito';
+            src: url({{asset "fonts/Gabarito[wght].woff2"}}) format('woff2');
         font-style: normal;
+        font-feature-settings: "smcp";
     }
-    /* Millimetre Bold */
+
+    /* CKSans */
     @font-face {
-        font-family: 'Millimetre';
-            src: url({{asset "fonts/Millimetre-Bold_web.woff2"}}) format('woff2'),
-            url({{asset "fonts/Millimetre-Bold.otf"}}) format('opentype');
-        font-weight: 600;
+        font-family: 'CKSans';
+            src: url({{asset "fonts/CKSansBold.woff2"}}) format('woff2');
         font-style: normal;
+        font-weight: bold;
     }
-    /* Millimetre Extrablack */
-    @font-face {
-        font-family: 'Millimetre';
-            src: url({{asset "fonts/Millimetre-Extrablack_web.woff2"}}) format('woff2'),
-            url({{asset "fonts/Millimetre-Extrablack.otf"}}) format('opentype');
-        font-weight: 800;
-        font-style: normal;
-    }
+
 
 </style>
