--- a/post.hbs
+++ b/post.hbs
@@ -7,7 +7,7 @@
     <header class="gh-canvas bg-plastic-gray min-h-[75vh] max-h-screen grid grid-cols-12 grid-rows-7 gap-6 gap-y-5 p-6">
 
         <div class="col-span-4 row-span-4 col-start-2 row-start-2">
-            <h1 class="text-white font-sans text-7xl font-bold">{{title}}</h1>
+            <h1 class="text-white font-cksans text-9xl font-bold">{{title}}</h1>
             {{#if custom_excerpt}}
             <p class="bg-vfd-dark text-vfd-light font-vfd text-xl p-2 rounded-lg w-full">{{custom_excerpt}}</p>
             {{/if}}
@@ -71,7 +71,7 @@
         {{/if}}
     </header>
 
-    <div class="gh-canvas">
+    <div class="gh-canvas font-serif">
         {{content}}
     </div>
 
